--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
   "homepage": "https://github.com/KanapinM/express-mesto-gha#readme",
   "dependencies": {
     "express": "^4.18.2",
-    "mongoose": "^6.8.3"
+    "express-rate-limit": "^6.7.0",
+    "helmet": "^6.0.1",
+    "mongoose": "^6.8.3",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "eslint": "^8.31.0",
