--- a/package.json
+++ b/package.json
@@ -20,9 +20,16 @@
   },
   "homepage": "https://github.com/KanapinM/express-mesto-gha#readme",
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
+    "celebrate": "^15.0.1",
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
     "helmet": "^6.0.1",
+    "joi": "^17.7.0",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.3",
     "validator": "^13.7.0"
   },
