--- a/package.json
+++ b/package.json
@@ -13,14 +13,13 @@
     "url": "git+https://github.com/KanapinM/express-mesto-gha.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Kanapin Marat",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/KanapinM/express-mesto-gha/issues"
   },
   "homepage": "https://github.com/KanapinM/express-mesto-gha#readme",
   "dependencies": {
-    "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "celebrate": "^15.0.1",
     "cookie-parser": "^1.4.6",
